objects/RMA_Milestone__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMA__c</fullName>
        <label>RMA</label>
        <referenceTo>RMA__c</referenceTo>
        <relationshipLabel>RMA Milestones</relationshipLabel>
        <relationshipName>RMA_Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>RMA Milestone</label>
    <nameField>
        <label>RMA Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RMA Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>